# Flux

./: .gitignore  BRANCH_GOAL.md  COMMANDS.md  CONTRIBUTING.md  GOAL.md  LICENCE  Login.py  MANIFEST.in  README.md  VERSION.txt  cmdhandler.py  linux-requirements.txt  pyproject.toml  repo_stats.py  requirements.txt  s.py  setup.py  setup.sh  test.py  useless.txt  win-requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  run-tests.yml
cmds/: help.py
docs/: README.md  cd.md  clear.md  cr.md  exit.md  export.md  file.md  flux.md  fmp.md  joke.md  ls.md  observer.md  ps.md  rm.md  set.md  systemctl.md  unzip.md  zip.md
docs/api/: first_command.md  flux_api.md
flux/: __init__.py  main.py
flux/core/: _boot.py  fboot.py  manager.py  setup.py
flux/security/: public.pem
flux/settings/: info.py  settings.py
flux/utils/: __init__.py  crash_handler.py  environment.py  exceptions.py  format.py  paths.py  security.py  tables.py  text.py  transform.py
source/: Login.py  TestingField.py  cmd_handler.py  cmdhandler.py  main.py  update.py  user.py  utils.py
source/cmds/: calc.py  countextension.py  countfile.py  dir.py  help.py  nickname.py  now.py  speech.py  system.py  utils.py  window.py
source/users/: Users.json
source/utils/: utils.py
src/: .env  main.py  setup.py
src/core/: bgtasks.py  manager.py  setup.py
src/lang/: en.txt  it.txt
src/settings/: _sort_settings.py  info.py  settings.json  version
src/tests/: test_0001.py  (+3 more)
tests/: .env  test_env_variables.py  test_shell.py  test_user.py  test_utils.py  test_variables.py
(+128 files in other folders)
