[project]
name = "flux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autopep8==2.3.2",
    "certifi==2026.1.4",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "cryptography==46.0.6",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==26.0",
    "paramiko==4.0.0",
    "pillow==12.1.0",
    "ping3==5.1.5",
    "pluggy==1.6.0",
    "psutil==7.2.2",
    "pycodestyle==2.14.0",
    "pydantic==2.12.5",
    "pydub==0.25.1",
    "pypdf==6.9.2",
    "pyreadline3==3.5.4 ; sys_platform == 'win32'",
    "python-magic==0.4.27 ; sys_platform == 'linux'",
    "python-magic-bin==0.4.14 ; sys_platform == 'win32'",
    "requests==2.33.1",
    "tomli==2.4.1",
    "urllib3==2.6.3",
    "watchdog==6.0.0",
    "windows-curses==2.4.2 ; sys_platform == 'win32'",
]
